--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 ##
 ## directory
 ##
-/.bin
-/.out
-/.log
-/.logs
-/.build
-/.cache
-/.target
-
+.bin
+.out
+.log
+.logs
+.build
+.cache
+.config
+.target
 .svelte-kit
+.node_modules
 
 bin
 out
@@ -17,8 +18,9 @@ log
 logs
 build
 cache
+config
 target
-
+svelte-kit
 node_modules
 
 ##
@@ -26,33 +28,33 @@ node_modules
 ##
 *.bak*
 *.zip
+
 *Zone.Identifier
 
 ##
 ## file: include
 ##
-/.config/config.*.json
-/.nvim/*.json
-/.vscode/*.json
-/.zed/*.json
+.config/config.*.json
+.nvim/*.json
+.vscode/*.json
+.zed/*.json
 
-/CMakePresets.json
-/test_*
-
-dbuild.*
-
+CMakePresets.json
+config/config.*.json
 compile_commands.json
-
 config.h
-export.h
-export_static.h
-export_shared.h
+config.hh
+config.hpp
+export*.h
+export*.hh
+export*.hpp
 
 ##
 ## file: exclude
 ##
-!/.config/config.*.json.template
-!/.nvim/*.json.template
-!/.vscode/*.json.template
-!/.zed/*.json.template
+!.config/config.*.json.template
+!.nvim/*.json.template
+!.vscode/*.json.tempalte
+!.zed/*.json.template
 
+config/config.*.json.template
